Fixed a layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -67,3 +67,6 @@ img {
 .autocomplete-list-item .autocomplete-content {
     position: absolute;
 }
+.product-card .card-content {
+    padding: 0;
+}
